# private-isu

./: .gitattributes  .gitignore  .hadolint.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  Taskfile.yaml  Vagrantfile  ghalint.yaml  go.work  infra-mysql-zz-isucon.cnf  infra-nginx-isucon.conf  infra-nginx-ltsv.conf  infra-nginx-upstream.conf  k6.js  manual.md  osv-scanner.toml  public_manual.md  renovate.json
.github/: CODEOWNERS
.github/workflows/: ansible.yml  atlas.yml  build-ami.yml  ci-atlas.yaml  ci.yml  codeql.yml  github-actions-lint.yml  hadolint.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml  renovate-config-validator-ci.yml
ansible/: production  setup-bench.yml  setup-portal.yml  setup.yml
ansible/group_vars/: admin.yml
ansible_old/: README.md
benchmarker/: .gitignore  Dockerfile  Makefile  cache.go  cli.go  cli_test.go  go.mod  go.sum  scenario.go  userdata.go  version.go  worker.go
benchmarker/cache/: cache.go
benchmarker/checker/: action.go  session.go
benchmarker/score/: fail.go  score.go
benchmarker/sql/: schema.sql
benchmarker/userdata/: .gitignore  Gemfile  README.md  kaomoji.txt  load.rb
benchmarker/util/: util.go
benchmarker/worker/: action.go  fail.go  scenario.go  score.go  session.go  worker.go
data/: .gitignore  README.md  ime_std.txt  load.rb
data/ramen/: package.json  ramen.js
db/: isuconp_2018-07-21.sql
e2etest/: package.json
e2etest/test/: nightmare.js
grafana/datasources/: datasource.yaml
k6/: ab.js  account.js  accounts.js  accounts.json  comment.js  config.js  initialize.js  integrated.js  package.json  postimage.js
k6/accounts/: accounts.json
memo/: architecture.md  bench_log.md  tools.md
migrations/: atlas.sum
portal/: Capfile  Gemfile  README.md
portal/config/: application.rb  database.yml  deploy.rb  puma.rb  routes.rb  secrets.yml  sidekiq.yml
portal/db/: schema.rb  seeds.rb
provisioning/: README.md  ansible.cfg  hosts  test
scripts/: build_ami.sh
webapp/: .env.sample  .gitignore  Makefile  README.md  compose.yml  docker-compose.yml  rotate.sh
webapp/command/: mysqldumpslow.sh
webapp/etc/: my.cnf
webapp/go/: Dockerfile  Makefile  app.go  go.mod  go.sum
webapp/golang/: .air.toml  .gitignore  Dockerfile  Makefile  app.go  go.mod  go.sum  lock.json  manifest.json  (+1 more)
webapp/python/: Dockerfile  README.md  app.py  isu-python.service  pymc_session.py  pyproject.toml  requirements.freeze  requirements.txt
webapp/python/templates/: banned.html  header.html  index.html  layout.html  login.html  post.html  posts.html  register.html  user.html
webapp/rust/: .gitignore  Cargo.toml  Dockerfile  map.json
webapp/rust/src/: main.rs
webapp/rust/static/: banned.html  index.html  layout.html  login.html  post.html  post_id.html  posts.html  posts_stand_alone.html  register.html  user.html
webapp/rust/templates/: layout.html  login.html  post_id.html  register.html
(+224 files in other folders)
