[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"

sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "chrono", "uuid"]}

anyhow = "1.0.57"
chrono = "0.4.19"
log = "0.4.17"
num_cpus = "1.13.1"
simplelog = "0.12.0"
