[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-redis = "0.10.0"
actix-session = "0.5.0"
actix-web = "4.0.1"

handlebars = {version = "4.3.0", features = ["dir_source"]}
sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "chrono", "uuid"]}

anyhow = "1.0.57"
chrono = {version = "0.4.19", features = ["serde"]}
derive_more = "0.99.17"
log = "0.4.17"
num_cpus = "1.13.1"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
simplelog = "0.12.0"
